# RunAndShoot

./: CMakeLists.txt  README.md
include/app/entities/: Player.h
include/engine/: Engine.h  EventHandler.h  GameStates.h  TextureManager.h
include/engine/entities/: Action.h  GameObject.hpp  InputState.h  Pawn.h  Player.h  Vector2D.hpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  GameInit.cpp
src/app/entities/: Player.cpp
src/engine/: CMakeLists.txt  Engine.cpp  EventHandler.cpp  TextureManager.cpp
src/engine/entities/: CMakeLists.txt  Pawn.cpp  Player.cpp
